# AOAgent

./: README.md  pyproject.toml
.github/: CODEOWNERS
config/: available_models.yml
src/aoagent/: __init__.py
src/aoagent/core/: task_components.py
src/aoagent/domain/: agent.py
src/aoagent/examples/: basic_usage.py
src/aoagent/mcp/: __init__.py  train.py  weather.py
src/aoagent/mcp/config/: general.json  stations.json  weather.json
src/aoagent/utils/: settings.py
